fix alert color in dark mode

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -52,3 +52,7 @@
 #app.dark .card {
   background-color: mediumslateblue;
 }
+
+#app.dark .alert {
+  color: white;
+}
